<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/observation_sorting_group"
        android:checkableBehavior="single"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/menu_sorting_order"
        app:showAsAction="ifRoom">

        <item
            android:id="@+id/observation_sorting_datetime_desc"
            android:orderInCategory="1"
            android:title="@string/sorting_datetime_desc"
            app:showAsAction="never" />

        <item
            android:id="@+id/observation_sorting_datetime_asc"
            android:orderInCategory="2"
            android:title="@string/sorting_datetime_asc"
            app:showAsAction="never" />

        <item
            android:id="@+id/observation_sorting_name_asc"
            android:orderInCategory="3"
            android:title="@string/sorting_name_asc"
            app:showAsAction="never" />

        <item
            android:id="@+id/observation_sorting_name_desc"
            android:orderInCategory="4"
            android:title="@string/sorting_name_desc"
            app:showAsAction="never" />

    </group>

</menu>