<?xml version="1.0" encoding="utf-8"?><!-- Description input is dynamic in height, scrolling needed to make sure save button stays accessible -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".screens.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium">

        <LinearLayout
            android:id="@+id/autofocus_dummy"
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_observation_species_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/add_observation_species_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_observation_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/add_observation_rarity_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_observation_species_container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_observation_rarity_title" />

            <RadioButton
                android:id="@+id/add_observation_rarity_common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rarity_common" />

            <RadioButton
                android:id="@+id/add_observation_rarity_rare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rarity_rare" />

            <RadioButton
                android:id="@+id/add_observation_rarity_extremely_rare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rarity_extremely_rare" />

        </RadioGroup>

        <TextView
            android:id="@+id/add_observation_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/add_observation_location_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_observation_rarity_radiogroup" />

        <CheckBox
            android:id="@+id/add_observation_location_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_observation_location_toggle_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_observation_location_title" />


        <TextView
            android:id="@+id/add_observation_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/add_observation_image_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_observation_location_toggle" />

        <CheckBox
            android:id="@+id/add_observation_image_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_observation_image_toggle_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_observation_image_title" />

        <ImageView
            android:id="@+id/add_observation_image_preview"
            android:layout_width="0dp"
            android:layout_height="@dimen/add_observation_imagepreview_height"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:contentDescription="@string/no_image_attached"
            android:src="@drawable/ic_imageplaceholder_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/add_observation_image_toggle"
            app:layout_constraintTop_toTopOf="@id/add_observation_image_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_observation_description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_observation_description_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_observation_image_preview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_observation_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_observation_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/add_observation_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_observation_description_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>